--- a/MSIFanControl/Base.lproj/Main.storyboard
+++ b/MSIFanControl/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15702"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="21507"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,7 +16,7 @@
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <menu key="submenu" title="MSIFanControl" systemMenu="apple" id="uQy-DD-JDr">
                                     <items>
-                                        <menuItem title="About MSIFanControl" id="5kV-Vb-QxS">
+                                        <menuItem title="关于MSIFanControl" id="5kV-Vb-QxS">
                                             <modifierMask key="keyEquivalentModifierMask"/>
                                             <connections>
                                                 <action selector="orderFrontStandardAboutPanel:" target="Ady-hI-5gd" id="Exp-CZ-Vem"/>
@@ -29,25 +30,25 @@
                                             <menu key="submenu" title="Services" systemMenu="services" id="hz9-B4-Xy5"/>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="4je-JR-u6R"/>
-                                        <menuItem title="Hide MSIFanControl" keyEquivalent="h" id="Olw-nP-bQN">
+                                        <menuItem title="隐藏MSIFanControl" keyEquivalent="h" id="Olw-nP-bQN">
                                             <connections>
                                                 <action selector="hide:" target="Ady-hI-5gd" id="PnN-Uc-m68"/>
                                             </connections>
                                         </menuItem>
-                                        <menuItem title="Hide Others" keyEquivalent="h" id="Vdr-fp-XzO">
+                                        <menuItem title="隐藏其他" keyEquivalent="h" id="Vdr-fp-XzO">
                                             <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
                                             <connections>
                                                 <action selector="hideOtherApplications:" target="Ady-hI-5gd" id="VT4-aY-XCT"/>
                                             </connections>
                                         </menuItem>
-                                        <menuItem title="Show All" id="Kd2-mp-pUS">
+                                        <menuItem title="显示全部" id="Kd2-mp-pUS">
                                             <modifierMask key="keyEquivalentModifierMask"/>
                                             <connections>
                                                 <action selector="unhideAllApplications:" target="Ady-hI-5gd" id="Dhg-Le-xox"/>
                                             </connections>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="kCx-OE-vgT"/>
-                                        <menuItem title="Quit MSIFanControl" keyEquivalent="q" id="4sb-4s-VLi">
+                                        <menuItem title="退出MSIFanControl" keyEquivalent="q" id="4sb-4s-VLi">
                                             <connections>
                                                 <action selector="terminate:" target="Ady-hI-5gd" id="Te7-pn-YzF"/>
                                             </connections>
@@ -631,23 +632,23 @@
                                     </items>
                                 </menu>
                             </menuItem>
-                            <menuItem title="Window" id="aUF-d1-5bR">
+                            <menuItem title="窗口" id="aUF-d1-5bR">
                                 <modifierMask key="keyEquivalentModifierMask"/>
-                                <menu key="submenu" title="Window" systemMenu="window" id="Td7-aD-5lo">
+                                <menu key="submenu" title="窗口" systemMenu="window" id="Td7-aD-5lo">
                                     <items>
-                                        <menuItem title="Minimize" keyEquivalent="m" id="OY7-WF-poV">
+                                        <menuItem title="最小化" keyEquivalent="v" id="OY7-WF-poV">
                                             <connections>
                                                 <action selector="performMiniaturize:" target="Ady-hI-5gd" id="VwT-WD-YPe"/>
                                             </connections>
                                         </menuItem>
-                                        <menuItem title="Zoom" id="R4o-n2-Eq4">
+                                        <menuItem title="缩放" id="R4o-n2-Eq4">
                                             <modifierMask key="keyEquivalentModifierMask"/>
                                             <connections>
                                                 <action selector="performZoom:" target="Ady-hI-5gd" id="DIl-cC-cCs"/>
                                             </connections>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="eu3-7i-yIM"/>
-                                        <menuItem title="Bring All to Front" id="LE2-aR-0XJ">
+                                        <menuItem title="将所有窗口置于顶层" id="LE2-aR-0XJ">
                                             <modifierMask key="keyEquivalentModifierMask"/>
                                             <connections>
                                                 <action selector="arrangeInFront:" target="Ady-hI-5gd" id="DRN-fu-gQh"/>
@@ -674,7 +675,20 @@
                         <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                     </connections>
                 </application>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="MSIFanControl" customModuleProvider="target"/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="MSIFanControl" customModuleProvider="target">
+                    <connections>
+                        <outlet property="AboutMenuItem" destination="5kV-Vb-QxS" id="uMz-zz-lYP"/>
+                        <outlet property="BringAllToFrontMenuEntry" destination="LE2-aR-0XJ" id="GHy-vh-JMh"/>
+                        <outlet property="HideMenuItem" destination="Olw-nP-bQN" id="R3m-44-bsO"/>
+                        <outlet property="HideOthersMenuItem" destination="Vdr-fp-XzO" id="DmI-b9-LID"/>
+                        <outlet property="MinimizeMenuEntry" destination="OY7-WF-poV" id="PSU-oC-7Ai"/>
+                        <outlet property="QuitMenuItem" destination="4sb-4s-VLi" id="56G-gQ-NeI"/>
+                        <outlet property="ShowAllMenuItem" destination="Kd2-mp-pUS" id="gYJ-Jt-tzx"/>
+                        <outlet property="WindowMenu" destination="Td7-aD-5lo" id="pSx-JF-Jw9"/>
+                        <outlet property="WindowMenuItem" destination="aUF-d1-5bR" id="n7d-e4-2nM"/>
+                        <outlet property="ZoomMenuEntry" destination="R4o-n2-Eq4" id="qAe-W3-cn5"/>
+                    </connections>
+                </customObject>
                 <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -802,6 +816,7 @@
                     </view>
                     <connections>
                         <outlet property="autoBtn" destination="kos-Ab-V7Y" id="laA-Pc-hCr"/>
+                        <outlet property="cpuFanSpeedLevel" destination="jcd-KR-XDH" id="cNh-GV-JXW"/>
                         <outlet property="enterBtn" destination="eYS-J0-T8T" id="xMx-ya-ula"/>
                         <outlet property="fan0" destination="EO4-Wi-JFl" id="6pG-eI-KXi"/>
                         <outlet property="fan1" destination="RQR-sb-KZe" id="SVZ-Ay-O9I"/>
